--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.13",
+    "@angular/animations": "^8.2.14",
     "@angular/common": "~8.2.13",
     "@angular/compiler": "~8.2.13",
     "@angular/core": "~8.2.13",
@@ -21,8 +21,11 @@
     "@angular/router": "~8.2.13",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
+    "ngx-toastr": "^11.2.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
+    "ts-debounce": "^1.0.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -31,9 +34,10 @@
     "@angular/cli": "~8.3.17",
     "@angular/compiler-cli": "~8.2.13",
     "@angular/language-service": "~8.2.13",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.146",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
