--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "rxjs": "~6.4.0",
     "ts-debounce": "^1.0.0",
     "tslib": "^1.10.0",
-    "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -54,7 +53,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "^3.7.2"
   },
   "engines": {
     "node": "10.16.3",
